# thales

./: .gitignore  .spi.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IOS_BUILD.md  Package.swift  README.md  build.rs  build_ios.sh
.github/workflows/: ci.yml  release.yml  swift-release.yml
benches/: benchmarks.rs
src/: approximations.rs  ast.rs  bridge.rs  dimensions.rs  equation_system.rs  ffi.rs  inequality.rs  integration.rs  latex.rs  lib.rs  limits.rs  matrix.rs  numerical.rs  ode.rs  optimization.rs  parser.rs  partial_fractions.rs  pattern.rs  precision.rs  resolution_path.rs  series.rs  solver.rs  special.rs  transforms.rs  trigonometric.rs
src/guides/: calculus_operations.rs  coordinate_systems.rs  error_handling.rs  mod.rs  numerical_methods.rs  series_expansions.rs  solving_equations.rs  working_with_units.rs
swift/: Package.swift  README.md
swift/Sources/Thales/: ThalesWrapper.swift  thales.swift
swift/Sources/Thales/Thales.docc/: Thales.md
swift/Sources/Thales/include/: thales.h
tests/: ast_tests.rs  derivative_tests.rs  ffi_tests.rs  integration_tests.rs  numerical_solver_tests.rs  parser_tests.rs  property_tests.rs  simplification_tests.rs  solver_tests.rs  transcendental_solver_tests.rs
