[package]
name = "thales"
version = "0.2.0"
edition = "2021"
authors = ["Christian C. Berclaz"]
license = "MIT"
description = "A comprehensive Computer Algebra System (CAS) library for symbolic mathematics, equation solving, calculus, and linear algebra"
repository = "https://github.com/ChrisGVE/thales"
documentation = "https://docs.rs/thales"
homepage = "https://github.com/ChrisGVE/thales"
keywords = ["math", "algebra", "calculus", "symbolic", "cas"]
categories = ["mathematics", "science"]
readme = "README.md"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
chumsky = "1.0.0-alpha.8"
num = "0.4"
num-bigint = "0.4"
num-complex = "0.4"
num-rational = "0.4"
argmin = "0.10"
nalgebra = "0.33"
fasteval = "0.2"
swift-bridge = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
ffi = []

[build-dependencies]
swift-bridge-build = "0.1"

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[target.aarch64-apple-ios]
# iOS device configuration

[target.x86_64-apple-ios]
# iOS simulator (Intel) configuration

[target.aarch64-apple-ios-sim]
# iOS simulator (ARM) configuration
